--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,7 +62,7 @@ video {
   color: #d4bc8f;
   font-size: 1.5rem;
   text-shadow: 3px 2px 2px rgb(50, 50, 50);
-  width: 200px;
+  /* width: 200px; */
   margin-left: 1.2rem;
   text-align: center;
 }
@@ -619,7 +619,7 @@ td {
   }
   .giws-banners-container>.heading>.current-banner {
     font-size: 1rem;
-    width: 100px;
+    /* width: 120px; */
     margin-left: 1.2rem;
     text-align: center;
   }
